[package]
name = "fuzion_market"
version = "0.2.0"
authors = ["Le Turt <89463679+LeTurt333@users.noreply.github.com>"]
edition = "2021"
publish = false
resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anyhow = "1.0.69"
cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.2.1", features = ["stargate"] }
cosmwasm-storage = "1.2.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
cw721 = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.38" }
prost = {version = "0.11.7", default-features = false, features = ["prost-derive"]}
prost-types = {version = "0.11.7", default-features = false}
cosmos-sdk-proto = { version = "0.16.0", default-features = false }

[dev-dependencies]
cw-multi-test = "0.16.2"
cw20-base = { version = "1.0.1", features = ["library"] }
cw721-base = "0.16.0"
