[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
authors = ["Le Turt <89463679+LeTurt333@users.noreply.github.com>"]
edition = "2021"
publish = false
keywords = ["cosmwasm"]

[workspace.dependencies]
anyhow = "1.0.69"
thiserror = { version = "1.0.39" }
cosmwasm-std = { version = "1.3.1", features = ["stargate"] }
cosmwasm-schema = "1.3.1"
cw-storage-plus = "1.1.0"
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true