[package]
name = "juno_vaults"
version = "0.1.0"
authors = ["Le Turt <89463679+LeTurt333@users.noreply.github.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.23", default-features = false }
cosmwasm-schema = "1.1.8"
cosmwasm-std = { version = "1.1.8", default-features = true }
cosmwasm-storage = "1.1.8"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
cw20 = "1.0.0"
cw721 = "0.16.0"
schemars = "0.8.11"
serde = { version = "1.0.148", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.37" }

[dev-dependencies]
cosmwasm-vm = { version = "1.1.8", default-features = false, features = ["iterator"] }
cw-multi-test = "0.16.1"
cw20-base = { version = "1.0.0", features = ["library"] }
cw721-base = "0.16.0"
