[package]
name = "cyberswap_nft"
version = "0.1.0"
authors = ["Le Turt <89463679+LeTurt333@users.noreply.github.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
chrono = { version = "0.4.22", default-features = false }
cosmwasm-schema = "1.1.2"
cosmwasm-std = { version = "1.1.2", default-features = true }
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.14.0"
cw721 = "0.15.0"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

[dev-dependencies]
cw-multi-test = "0.13.4"
