[package]
name = "royalty"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
exclude = [
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# library = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
cw2 = "1.0.1"
cw20 = "1.1.0"
cw721 = "0.16.0"
serde_json = "1.0.93"

cw721-base = "0.16.0"
serde-cw-value = "0.7.0"
serde-json-wasm = "0.5.1"
cw721-metadata-onchain = "0.15.0"
royalties = { path = "../../packages/royalties" }

