[package]
name = "royalty"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
exclude = [
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# library = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
schemars.workspace = true
serde.workspace = true
cw2 = "1.0.1"
serde_json = "1.0.93"
royalties = { path = "../../packages/royalties" }

